<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.forrestguice.support.widget.CoordinatorLayout android:id="@+id/layout_background"
        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <com.forrestguice.support.widget.AppBarLayout
                android:id="@+id/layout_app_menubar"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <com.forrestguice.support.widget.Toolbar
                    android:id="@+id/app_menubar" style="?attr/toolbarTheme"
                    app:title="@string/action_colors"
                    app:popupTheme="?attr/actionBarPopupTheme" />

            </com.forrestguice.support.widget.AppBarLayout>

            <LinearLayout android:id="@+id/fragmentContainer"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </com.forrestguice.support.widget.CoordinatorLayout>
</merge>
