...
            android:layout_width="match_parent" android:layout_height="wrap_content"
            style="@style/SunsetTimeSettingsGroupHeader">

            <TextView style="@style/SunsetTimeSettingsGroupTitle"
                      android:id="@+id/appwidget_timezone_grouptitle"
                      android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/settings_timezone" />

            <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1dp" android:background="@null" />

            <CheckBox android:id="@+id/settings_group_timezone_button"
                style="@style/SunsetTimeSettingsExpandCheckBox"
                android:layout_width="wrap_content" android:layout_height="wrap_content" />
...
